p.output
Nonterminals useless in grammar

   range_expression
   IdentifierNode
   file
   statement
   statements


Terminals unused in grammar

   ERROR
   ASYNC
   EOL
   AWAIT
   DEL
   FROM
   IMPORT
   IS
   LAMBDA
   PASS
   RAISE
   DOT
   OR
   NOT


Rules useless in grammar

  150 range_expression: LPAREN NUMBER COMMA NUMBER RPAREN


Rules useless in parser due to conflicts

  143 function_declaratin_args: function_identifier_parameter COMMA

  146 function_identifier_parameter: IDENTIFIER


State 1 conflicts: 1 shift/reduce, 11 reduce/reduce
State 2 conflicts: 1 shift/reduce
State 7 conflicts: 1 shift/reduce
State 31 conflicts: 1 shift/reduce
State 36 conflicts: 1 shift/reduce
State 43 conflicts: 9 reduce/reduce
State 46 conflicts: 9 reduce/reduce
State 72 conflicts: 14 shift/reduce
State 85 conflicts: 2 shift/reduce
State 94 conflicts: 14 shift/reduce
State 95 conflicts: 14 shift/reduce
State 96 conflicts: 14 shift/reduce
State 98 conflicts: 2 shift/reduce
State 137 conflicts: 31 shift/reduce
State 139 conflicts: 31 shift/reduce
State 153 conflicts: 2 shift/reduce
State 155 conflicts: 2 shift/reduce
State 156 conflicts: 2 shift/reduce
State 158 conflicts: 2 shift/reduce
State 160 conflicts: 1 shift/reduce
State 166 conflicts: 31 shift/reduce
State 167 conflicts: 31 shift/reduce
State 168 conflicts: 31 shift/reduce
State 169 conflicts: 31 shift/reduce
State 170 conflicts: 31 shift/reduce
State 171 conflicts: 31 shift/reduce
State 172 conflicts: 31 shift/reduce
State 173 conflicts: 31 shift/reduce
State 174 conflicts: 31 shift/reduce
State 175 conflicts: 31 shift/reduce
State 176 conflicts: 31 shift/reduce
State 177 conflicts: 31 shift/reduce
State 178 conflicts: 31 shift/reduce
State 179 conflicts: 31 shift/reduce
State 180 conflicts: 14 shift/reduce
State 181 conflicts: 14 shift/reduce
State 182 conflicts: 14 shift/reduce
State 183 conflicts: 14 shift/reduce
State 184 conflicts: 14 shift/reduce
State 185 conflicts: 14 shift/reduce
State 186 conflicts: 14 shift/reduce
State 187 conflicts: 14 shift/reduce
State 188 conflicts: 14 shift/reduce
State 189 conflicts: 14 shift/reduce
State 190 conflicts: 14 shift/reduce
State 191 conflicts: 14 shift/reduce
State 192 conflicts: 14 shift/reduce
State 193 conflicts: 14 shift/reduce
State 194 conflicts: 14 shift/reduce
State 195 conflicts: 14 shift/reduce
State 196 conflicts: 14 shift/reduce
State 208 conflicts: 31 shift/reduce, 2 reduce/reduce
State 216 conflicts: 1 shift/reduce
State 224 conflicts: 1 reduce/reduce
State 229 conflicts: 2 shift/reduce
State 231 conflicts: 31 shift/reduce
State 233 conflicts: 31 shift/reduce, 1 reduce/reduce
State 238 conflicts: 31 shift/reduce
State 248 conflicts: 2 shift/reduce
State 255 conflicts: 1 shift/reduce
State 263 conflicts: 1 reduce/reduce
State 274 conflicts: 2 shift/reduce
State 279 conflicts: 1 shift/reduce
State 289 conflicts: 31 shift/reduce, 2 reduce/reduce
State 291 conflicts: 1 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: stats

    2 stats: stat
    3      | stat NEWLINE stats
    4      | INDENT stats DEDENT

    5 stat: simple_stat
    6     | compound_stat

    7 simple_stat: %empty
    8            | print
    9            | expression_stat
   10            | return
   11            | break
   12            | continue
   13            | global
   14            | nonlocal
   15            | yield
   16            | function_call
   17            | COMMENT_STRING
   18            | assert

   19 compound_stat: if
   20              | class
   21              | while
   22              | for
   23              | with
   24              | try
   25              | match
   26              | function_def
   27              | elif
   28              | else

   29 print: PRINT LPAREN expression RPAREN

   30 expression_stat: expression

   31 expression: expression ADD expression
   32           | expression SUB expression
   33           | expression MUL expression
   34           | expression DIV expression
   35           | expression EQ expression
   36           | expression GE expression
   37           | expression LE expression
   38           | expression GT expression
   39           | expression LT expression
   40           | expression POW expression
   41           | expression MOD expression
   42           | expression AND expression
   43           | expression AT expression
   44           | expression LOGICALOR expression
   45           | expression LOGICALAND expression
   46           | LOGICALNOT expression
   47           | expression IDENTITY expression
   48           | expression MEMBERSHIP expression
   49           | expression EQUALITY expression
   50           | expression RELATIONAL expression
   51           | expression '|' expression
   52           | expression '^' expression
   53           | expression '&' expression
   54           | expression BITWISESHIFT expression
   55           | expression '+' expression
   56           | expression '-' expression
   57           | expression '*' expression
   58           | expression '%' expression
   59           | expression '/' expression
   60           | expression DIVFLOOR expression
   61           | '-' expression
   62           | '+' expression
   63           | '~' expression
   64           | expression EXPONENTIATION expression
   65           | NUMBER
   66           | NUMBER COMMA NUMBER
   67           | STRING
   68           | STRING COMMA expression
   69           | expression COMMA expression
   70           | LPAREN expression RPAREN
   71           | IDENTIFIER ASSIGNMENT expression
   72           | IDENTIFIER
   73           | IDENTIFIER ASSIGNMENT LBRACKET expression RBRACKET
   74           | IDENTIFIER AS IDENTIFIER ASSIGNMENT expression

   75 return: RETURN args_expressions SEMICOLON
   76       | RETURN SEMICOLON

   77 break: BREAK SEMICOLON

   78 continue: CONTINUE SEMICOLON

   79 global: GLOBAL args_identifiers SEMICOLON

   80 nonlocal: NONLOCAL args_identifiers SEMICOLON

   81 yield: YIELD args_expressions SEMICOLON

   82 function_call: IDENTIFIER LPAREN args RPAREN COMMA
   83              | IDENTIFIER LPAREN args RPAREN ASSIGNMENT

   84 if: IF expression COLON stats elif

   85 elif: ELIF expression COLON stats elif
   86     | else

   87 else: ELSE COLON stats

   88 while: WHILE expression COLON stats
   89      | WHILE expression COLON stats else

   90 for: FOR IDENTIFIER IN RANGE expression COLON stats
   91    | FOR IDENTIFIER IN expression COLON stats

   92 assert: ASSERT expression SEMICOLON

   93 block: LBRACE stats RBRACE

   94 class: CLASS IDENTIFIER COLON stats
   95      | CLASS IDENTIFIER LPAREN class_args RPAREN COLON stats SEMICOLON

   96 with: WITH with COLON stats else SEMICOLON
   97     | generator
   98     | with_as
   99     | complex_with_as_stat

  100 complex_with_as_stat: LPAREN args_generator RPAREN AS LPAREN args_identifiers RPAREN

  101 args_generator: generator
  102               | generator COMMA args_generator

  103 with_as: generator AS IDENTIFIER
  104        | generator AS IDENTIFIER COMMA with_as

  105 try: TRY COLON stats except_stat_list else finally_stat

  106 except_stat_list: except_stat
  107                 | except_stat except_stat_list

  108 except_stat: EXCEPT except_expression COLON stats

  109 except_expression: %empty
  110                  | generator
  111                  | LPAREN args_generator RPAREN
  112                  | exception_as

  113 exception_as: IDENTIFIER AS generator

  114 function_identifier_parameter: IDENTIFIER
  115                              | UNDERSCORE
  116                              | IDENTIFIER ':' IDENTIFIER

  117 args_expressions: expression COMMA args_expressions
  118                 | expression

  119 args_identifiers: IDENTIFIER COMMA args_identifiers
  120                 | IDENTIFIER

  121 args: expression COMMA args
  122     | expression
  123     | EXPONENTIATION IDENTIFIER
  124     | '*' IDENTIFIER COMMA args
  125     | IDENTIFIER ASSIGNMENT expression COMMA args

  126 generator: IDENTIFIER
  127          | function_call

  128 class_args: IDENTIFIER
  129           | IDENTIFIER COMMA class_args
  130           | IDENTIFIER LBRACKET args_identifiers RBRACKET
  131           | IDENTIFIER LBRACKET args_identifiers RBRACKET COMMA class_args

  132 finally_stat: %empty
  133             | FINALLY COLON block

  134 match: MATCH expression_stat COLON INDENT pattern_list DEDENT SEMICOLON

  135 pattern_list: pattern else SEMICOLON
  136             | pattern pattern_list SEMICOLON

  137 pattern: CASE expression_stat COLON block SEMICOLON
  138        | CASE IDENTIFIER AS IDENTIFIER COLON block SEMICOLON
  139        | CASE expression_stat IF args_expressions COLON block SEMICOLON

  140 function_def: DEF IDENTIFIER expression COLON stats
  141             | DEF IDENTIFIER LPAREN function_declaratin_args RPAREN ARROW IDENTIFIER COLON stats SEMICOLON

  142 function_declaratin_args: %empty
  143                         | function_identifier_parameter COMMA
  144                         | function_identifier_parameter COMMA function_declaratin_args
  145                         | keyword_args

  146 function_identifier_parameter: IDENTIFIER
  147                              | IDENTIFIER COLON IDENTIFIER

  148 keyword_args: IDENTIFIER ASSIGNMENT expression_stat
  149             | IDENTIFIER ASSIGNMENT expression_stat COMMA keyword_args


Terminals, with rules where they appear

$end (0) 0
'%' (37) 58
'&' (38) 53
'*' (42) 57 124
'+' (43) 55 62
'-' (45) 56 61
'/' (47) 59
':' (58) 116
'^' (94) 52
'|' (124) 51
'~' (126) 63
error (256)
NEWLINE (258) 3
IDENTIFIER (259) 71 72 73 74 82 83 90 91 94 95 103 104 113 114 116
    119 120 123 124 125 126 128 129 130 131 138 140 141 146 147 148
    149
STRING (260) 67 68
LPAREN (261) 29 70 82 83 95 100 111 141
RPAREN (262) 29 70 82 83 95 100 111 141
SEMICOLON (263) 75 76 77 78 79 80 81 92 95 96 134 135 136 137 138 139
    141
PRINT (264) 29
ERROR (265)
RANGE (266) 90
ASSERT (267) 92
ASYNC (268)
EOL (269)
AWAIT (270)
DEL (271)
FROM (272)
IMPORT (273)
IN (274) 90 91
IS (275)
LAMBDA (276)
PASS (277)
RAISE (278)
COMMA (279) 66 68 69 82 102 104 117 119 121 124 125 129 131 143 144
    149
AND (280) 42
COLON (281) 84 85 87 88 89 90 91 94 95 96 105 108 133 134 137 138 139
    140 141 147
LBRACE (282) 93
RBRACE (283) 93
ADD (284) 31
SUB (285) 32
MUL (286) 33
DIV (287) 34
POW (288) 40
COMMENT_STRING (289) 17
NUMBER (290) 65 66
UNDERSCORE (291) 115
DOT (292)
AT (293) 43
LBRACKET (294) 73 130 131
RBRACKET (295) 73 130 131
EQ (296) 35
GE (297) 36
LE (298) 37
GT (299) 38
LT (300) 39
MOD (301) 41
OR (302)
NOT (303)
ASSIGNMENT (304) 71 73 74 83 125 148 149
EQUALITY (305) 49
RELATIONAL (306) 50
IDENTITY (307) 47
MEMBERSHIP (308) 48
DEDENT (309) 4 134
INDENT (310) 4 134
LOGICALAND (311) 45
LOGICALOR (312) 44
LOGICALNOT (313) 46
BITWISESHIFT (314) 54
ARROW (315) 141
RETURN (316) 75 76
BREAK (317) 77
CONTINUE (318) 78
GLOBAL (319) 79
NONLOCAL (320) 80
YIELD (321) 81
IF (322) 84 139
CLASS (323) 94 95
ELIF (324) 85
ELSE (325) 87
WHILE (326) 88 89
FOR (327) 90 91
WITH (328) 96
AS (329) 74 100 103 104 113 138
TRY (330) 105
EXCEPT (331) 108
FINALLY (332) 133
MATCH (333) 134
CASE (334) 137 138 139
DEF (335) 140 141
DIVFLOOR (336) 60
EXPONENTIATION (337) 64 123
UNARY (338)


Nonterminals, with rules where they appear

$accept (94)
    on left: 0
program (95)
    on left: 1, on right: 0
stats (96)
    on left: 2 3 4, on right: 1 3 4 84 85 87 88 89 90 91 93 94 95 96
    105 108 140 141
stat (97)
    on left: 5 6, on right: 2 3
simple_stat (98)
    on left: 7 8 9 10 11 12 13 14 15 16 17 18, on right: 5
compound_stat (99)
    on left: 19 20 21 22 23 24 25 26 27 28, on right: 6
print (100)
    on left: 29, on right: 8
expression_stat (101)
    on left: 30, on right: 9 134 137 139 148 149
expression (102)
    on left: 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48
    49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69
    70 71 72 73 74, on right: 29 30 31 32 33 34 35 36 37 38 39 40 41
    42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
    63 64 68 69 70 71 73 74 84 85 88 89 90 91 92 117 118 121 122 125
    140
return (103)
    on left: 75 76, on right: 10
break (104)
    on left: 77, on right: 11
continue (105)
    on left: 78, on right: 12
global (106)
    on left: 79, on right: 13
nonlocal (107)
    on left: 80, on right: 14
yield (108)
    on left: 81, on right: 15
function_call (109)
    on left: 82 83, on right: 16 127
if (110)
    on left: 84, on right: 19
elif (111)
    on left: 85 86, on right: 27 84 85
else (112)
    on left: 87, on right: 28 86 89 96 105 135
while (113)
    on left: 88 89, on right: 21
for (114)
    on left: 90 91, on right: 22
assert (115)
    on left: 92, on right: 18
block (116)
    on left: 93, on right: 133 137 138 139
class (117)
    on left: 94 95, on right: 20
with (118)
    on left: 96 97 98 99, on right: 23 96
complex_with_as_stat (119)
    on left: 100, on right: 99
args_generator (120)
    on left: 101 102, on right: 100 102 111
with_as (121)
    on left: 103 104, on right: 98 104
try (122)
    on left: 105, on right: 24
except_stat_list (123)
    on left: 106 107, on right: 105 107
except_stat (124)
    on left: 108, on right: 106 107
except_expression (125)
    on left: 109 110 111 112, on right: 108
exception_as (126)
    on left: 113, on right: 112
function_identifier_parameter (127)
    on left: 114 115 116 146 147, on right: 143 144
args_expressions (128)
    on left: 117 118, on right: 75 81 117 139
args_identifiers (129)
    on left: 119 120, on right: 79 80 100 119 130 131
args (130)
    on left: 121 122 123 124 125, on right: 82 83 121 124 125
generator (131)
    on left: 126 127, on right: 97 101 102 103 104 110 113
class_args (132)
    on left: 128 129 130 131, on right: 95 129 131
finally_stat (133)
    on left: 132 133, on right: 105
match (134)
    on left: 134, on right: 25
pattern_list (135)
    on left: 135 136, on right: 134 136
pattern (136)
    on left: 137 138 139, on right: 135 136
function_def (137)
    on left: 140 141, on right: 26
function_declaratin_args (138)
    on left: 142 143 144 145, on right: 141 144
keyword_args (139)
    on left: 148 149, on right: 145 149


State 0

    0 $accept: . program $end

    IDENTIFIER      shift, and go to state 1
    STRING          shift, and go to state 2
    LPAREN          shift, and go to state 3
    PRINT           shift, and go to state 4
    ASSERT          shift, and go to state 5
    COMMENT_STRING  shift, and go to state 6
    NUMBER          shift, and go to state 7
    INDENT          shift, and go to state 8
    LOGICALNOT      shift, and go to state 9
    RETURN          shift, and go to state 10
    BREAK           shift, and go to state 11
    CONTINUE        shift, and go to state 12
    GLOBAL          shift, and go to state 13
    NONLOCAL        shift, and go to state 14
    YIELD           shift, and go to state 15
    IF              shift, and go to state 16
    CLASS           shift, and go to state 17
    ELIF            shift, and go to state 18
    ELSE            shift, and go to state 19
    WHILE           shift, and go to state 20
    FOR             shift, and go to state 21
    WITH            shift, and go to state 22
    TRY             shift, and go to state 23
    MATCH           shift, and go to state 24
    DEF             shift, and go to state 25
    '+'             shift, and go to state 26
    '-'             shift, and go to state 27
    '~'             shift, and go to state 28

    $default  reduce using rule 7 (simple_stat)

    program               go to state 29
    stats                 go to state 30
    stat                  go to state 31
    simple_stat           go to state 32
    compound_stat         go to state 33
    print                 go to state 34
    expression_stat       go to state 35
    expression            go to state 36
    return                go to state 37
    break                 go to state 38
    continue              go to state 39
    global                go to state 40
    nonlocal              go to state 41
    yield                 go to state 42
    function_call         go to state 43
    if                    go to state 44
    elif                  go to state 45
    else                  go to state 46
    while                 go to state 47
    for                   go to state 48
    assert                go to state 49
    class                 go to state 50
    with                  go to state 51
    complex_with_as_stat  go to state 52
    with_as               go to state 53
    try                   go to state 54
    generator             go to state 55
    match                 go to state 56
    function_def          go to state 57


State 1

   71 expression: IDENTIFIER . ASSIGNMENT expression
   72           | IDENTIFIER .
   73           | IDENTIFIER . ASSIGNMENT LBRACKET expression RBRACKET
   74           | IDENTIFIER . AS IDENTIFIER ASSIGNMENT expression
   82 function_call: IDENTIFIER . LPAREN args RPAREN COMMA
   83              | IDENTIFIER . LPAREN args RPAREN ASSIGNMENT
  126 generator: IDENTIFIER .

    LPAREN      shift, and go to state 58
    ASSIGNMENT  shift, and go to state 59
    AS          shift, and go to state 60

    $end       reduce using rule 72 (expression)
    $end       [reduce using rule 126 (generator)]
    NEWLINE    reduce using rule 72 (expression)
    NEWLINE    [reduce using rule 126 (generator)]
    RPAREN     reduce using rule 72 (expression)
    RPAREN     [reduce using rule 126 (generator)]
    SEMICOLON  reduce using rule 72 (expression)
    SEMICOLON  [reduce using rule 126 (generator)]
    COMMA      reduce using rule 72 (expression)
    COMMA      [reduce using rule 126 (generator)]
    RBRACE     reduce using rule 72 (expression)
    RBRACE     [reduce using rule 126 (generator)]
    DEDENT     reduce using rule 72 (expression)
    DEDENT     [reduce using rule 126 (generator)]
    ELIF       reduce using rule 72 (expression)
    ELIF       [reduce using rule 126 (generator)]
    ELSE       reduce using rule 72 (expression)
    ELSE       [reduce using rule 126 (generator)]
    AS         [reduce using rule 126 (generator)]
    EXCEPT     reduce using rule 72 (expression)
    EXCEPT     [reduce using rule 126 (generator)]
    FINALLY    reduce using rule 72 (expression)
    FINALLY    [reduce using rule 126 (generator)]
    $default   reduce using rule 72 (expression)


State 2

   67 expression: STRING .
   68           | STRING . COMMA expression

    COMMA  shift, and go to state 61

    COMMA     [reduce using rule 67 (expression)]
    $default  reduce using rule 67 (expression)


State 3

   70 expression: LPAREN . expression RPAREN
  100 complex_with_as_stat: LPAREN . args_generator RPAREN AS LPAREN args_identifiers RPAREN

    IDENTIFIER  shift, and go to state 1
    STRING      shift, and go to state 2
    LPAREN      shift, and go to state 62
    NUMBER      shift, and go to state 7
    LOGICALNOT  shift, and go to state 9
    '+'         shift, and go to state 26
    '-'         shift, and go to state 27
    '~'         shift, and go to state 28

    expression      go to state 63
    function_call   go to state 64
    args_generator  go to state 65
    generator       go to state 66


State 4

   29 print: PRINT . LPAREN expression RPAREN

    LPAREN  shift, and go to state 67


State 5

   92 assert: ASSERT . expression SEMICOLON

    IDENTIFIER  shift, and go to state 68
    STRING      shift, and go to state 2
    LPAREN      shift, and go to state 62
    NUMBER      shift, and go to state 7
    LOGICALNOT  shift, and go to state 9
    '+'         shift, and go to state 26
    '-'         shift, and go to state 27
    '~'         shift, and go to state 28

    expression  go to state 69


State 6

   17 simple_stat: COMMENT_STRING .

    $default  reduce using rule 17 (simple_stat)


State 7

   65 expression: NUMBER .
   66           | NUMBER . COMMA NUMBER

    COMMA  shift, and go to state 70

    COMMA     [reduce using rule 65 (expression)]
    $default  reduce using rule 65 (expression)


State 8

    4 stats: INDENT . stats DEDENT

    IDENTIFIER      shift, and go to state 1
    STRING          shift, and go to state 2
    LPAREN          shift, and go to state 3
    PRINT           shift, and go to state 4
    ASSERT          shift, and go to state 5
    COMMENT_STRING  shift, and go to state 6
    NUMBER          shift, and go to state 7
    INDENT          shift, and go to state 8
    LOGICALNOT      shift, and go to state 9
    RETURN          shift, and go to state 10
    BREAK           shift, and go to state 11
    CONTINUE        shift, and go to state 12
    GLOBAL          shift, and go to state 13
    NONLOCAL        shift, and go to state 14
    YIELD           shift, and go to state 15
    IF              shift, and go to state 16
    CLASS           shift, and go to state 17
    ELIF            shift, and go to state 18
    ELSE            shift, and go to state 19
    WHILE           shift, and go to state 20
    FOR             shift, and go to state 21
    WITH            shift, and go to state 22
    TRY             shift, and go to state 23
    MATCH           shift, and go to state 24
    DEF             shift, and go to state 25
    '+'             shift, and go to state 26
    '-'             shift, and go to state 27
    '~'             shift, and go to state 28

    $default  reduce using rule 7 (simple_stat)

    stats                 go to state 71
    stat                  go to state 31
    simple_stat           go to state 32
    compound_stat         go to state 33
    print                 go to state 34
    expression_stat       go to state 35
    expression            go to state 36
    return                go to state 37
    break                 go to state 38
    continue              go to state 39
    global                go to state 40
    nonlocal              go to state 41
    yield                 go to state 42
    function_call         go to state 43
    if                    go to state 44
    elif                  go to state 45
    else                  go to state 46
    while                 go to state 47
    for                   go to state 48
    assert                go to state 49
    class                 go to state 50
    with                  go to state 51
    complex_with_as_stat  go to state 52
    with_as               go to state 53
    try                   go to state 54
    generator             go to state 55
    match                 go to state 56
    function_def          go to state 57


State 9

   46 expression: LOGICALNOT . expression

    IDENTIFIER  shift, and go to state 68
    STRING      shift, and go to state 2
    LPAREN      shift, and go to state 62
    NUMBER      shift, and go to state 7
    LOGICALNOT  shift, and go to state 9
    '+'         shift, and go to state 26
    '-'         shift, and go to state 27
    '~'         shift, and go to state 28

    expression  go to state 72


State 10

   75 return: RETURN . args_expressions SEMICOLON
   76       | RETURN . SEMICOLON

    IDENTIFIER  shift, and go to state 68
    STRING      shift, and go to state 2
    LPAREN      shift, and go to state 62
    SEMICOLON   shift, and go to state 73
    NUMBER      shift, and go to state 7
    LOGICALNOT  shift, and go to state 9
    '+'         shift, and go to state 26
    '-'         shift, and go to state 27
    '~'         shift, and go to state 28

    expression        go to state 74
    args_expressions  go to state 75


State 11

   77 break: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 76


State 12

   78 continue: CONTINUE . SEMICOLON

    SEMICOLON  shift, and go to state 77


State 13

   79 global: GLOBAL . args_identifiers SEMICOLON

    IDENTIFIER  shift, and go to state 78

    args_identifiers  go to state 79


State 14

   80 nonlocal: NONLOCAL . args_identifiers SEMICOLON

    IDENTIFIER  shift, and go to state 78

    args_identifiers  go to state 80


State 15

   81 yield: YIELD . args_expressions SEMICOLON

    IDENTIFIER  shift, and go to state 68
    STRING      shift, and go to state 2
    LPAREN      shift, and go to state 62
    NUMBER      shift, and go to state 7
    LOGICALNOT  shift, and go to state 9
    '+'         shift, and go to state 26
    '-'         shift, and go to state 27
    '~'         shift, and go to state 28

    expression        go to state 74
    args_expressions  go to state 81


State 16

   84 if: IF . expression COLON stats elif

    IDENTIFIER  shift, and go to state 68
    STRING      shift, and go to state 2
    LPAREN      shift, and go to state 62
    NUMBER      shift, and go to state 7
    LOGICALNOT  shift, and go to state 9
    '+'         shift, and go to state 26
    '-'         shift, and go to state 27
    '~'         shift, and go to state 28

    expression  go to state 82


State 17

   94 class: CLASS . IDENTIFIER COLON stats
   95      | CLASS . IDENTIFIER LPAREN class_args RPAREN COLON stats SEMICOLON

    IDENTIFIER  shift, and go to state 83


State 18

   85 elif: ELIF . expression COLON stats elif

    IDENTIFIER  shift, and go to state 68
    STRING      shift, and go to state 2
    LPAREN      shift, and go to state 62
    NUMBER      shift, and go to state 7
    LOGICALNOT  shift, and go to state 9
    '+'         shift, and go to state 26
    '-'         shift, and go to state 27
    '~'         shift, and go to state 28

    expression  go to state 84


State 19

   87 else: ELSE . COLON stats

    COLON  shift, and go to state 85


State 20

   88 while: WHILE . expression COLON stats
   89      | WHILE . expression COLON stats else

    IDENTIFIER  shift, and go to state 68
    STRING      shift, and go to state 2
    LPAREN      shift, and go to state 62
    NUMBER      shift, and go to state 7
    LOGICALNOT  shift, and go to state 9
    '+'         shift, and go to state 26
    '-'         shift, and go to state 27
    '~'         shift, and go to state 28

    expression  go to state 86


State 21

   90 for: FOR . IDENTIFIER IN RANGE expression COLON stats
   91    | FOR . IDENTIFIER IN expression COLON stats

    IDENTIFIER  shift, and go to state 87


State 22

   96 with: WITH . with COLON stats else SEMICOLON

    IDENTIFIER  shift, and go to state 88
    LPAREN      shift, and go to state 89
    WITH        shift, and go to state 22

    function_call         go to state 64
    with                  go to state 90
    complex_with_as_stat  go to state 52
    with_as               go to state 53
    generator             go to state 55


State 23

  105 try: TRY . COLON stats except_stat_list else finally_stat

    COLON  shift, and go to state 91


State 24

  134 match: MATCH . expression_stat COLON INDENT pattern_list DEDENT SEMICOLON

    IDENTIFIER  shift, and go to state 68
    STRING      shift, and go to state 2
    LPAREN      shift, and go to state 62
    NUMBER      shift, and go to state 7
    LOGICALNOT  shift, and go to state 9
    '+'         shift, and go to state 26
    '-'         shift, and go to state 27
    '~'         shift, and go to state 28

    expression_stat  go to state 92
    expression       go to state 36


State 25

  140 function_def: DEF . IDENTIFIER expression COLON stats
  141             | DEF . IDENTIFIER LPAREN function_declaratin_args RPAREN ARROW IDENTIFIER COLON stats SEMICOLON

    IDENTIFIER  shift, and go to state 93


State 26

   62 expression: '+' . expression

    IDENTIFIER  shift, and go to state 68
    STRING      shift, and go to state 2
    LPAREN      shift, and go to state 62
    NUMBER      shift, and go to state 7
    LOGICALNOT  shift, and go to state 9
    '+'         shift, and go to state 26
    '-'         shift, and go to state 27
    '~'         shift, and go to state 28

    expression  go to state 94


State 27

   61 expression: '-' . expression

    IDENTIFIER  shift, and go to state 68
    STRING      shift, and go to state 2
    LPAREN      shift, and go to state 62
    NUMBER      shift, and go to state 7
    LOGICALNOT  shift, and go to state 9
    '+'         shift, and go to state 26
    '-'         shift, and go to state 27
    '~'         shift, and go to state 28

    expression  go to state 95


State 28

   63 expression: '~' . expression

    IDENTIFIER  shift, and go to state 68
    STRING      shift, and go to state 2
    LPAREN      shift, and go to state 62
    NUMBER      shift, and go to state 7
    LOGICALNOT  shift, and go to state 9
    '+'         shift, and go to state 26
    '-'         shift, and go to state 27
    '~'         shift, and go to state 28

    expression  go to state 96


State 29

    0 $accept: program . $end

    $end  shift, and go to state 97


State 30

    1 program: stats .

    $default  reduce using rule 1 (program)


State 31

    2 stats: stat .
    3      | stat . NEWLINE stats

    NEWLINE  shift, and go to state 98

    NEWLINE   [reduce using rule 2 (stats)]
    $default  reduce using rule 2 (stats)


State 32

    5 stat: simple_stat .

    $default  reduce using rule 5 (stat)


State 33

    6 stat: compound_stat .

    $default  reduce using rule 6 (stat)


State 34

    8 simple_stat: print .

    $default  reduce using rule 8 (simple_stat)


State 35

    9 simple_stat: expression_stat .

    $default  reduce using rule 9 (simple_stat)


State 36

   30 expression_stat: expression .
   31 expression: expression . ADD expression
   32           | expression . SUB expression
   33           | expression . MUL expression
   34           | expression . DIV expression
   35           | expression . EQ expression
   36           | expression . GE expression
   37           | expression . LE expression
   38           | expression . GT expression
   39           | expression . LT expression
   40           | expression . POW expression
   41           | expression . MOD expression
   42           | expression . AND expression
   43           | expression . AT expression
   44           | expression . LOGICALOR expression
   45           | expression . LOGICALAND expression
   47           | expression . IDENTITY expression
   48           | expression . MEMBERSHIP expression
   49           | expression . EQUALITY expression
   50           | expression . RELATIONAL expression
   51           | expression . '|' expression
   52           | expression . '^' expression
   53           | expression . '&' expression
   54           | expression . BITWISESHIFT expression
   55           | expression . '+' expression
   56           | expression . '-' expression
   57           | expression . '*' expression
   58           | expression . '%' expression
   59           | expression . '/' expression
   60           | expression . DIVFLOOR expression
   64           | expression . EXPONENTIATION expression
   69           | expression . COMMA expression

    COMMA           shift, and go to state 99
    AND             shift, and go to state 100
    ADD             shift, and go to state 101
    SUB             shift, and go to state 102
    MUL             shift, and go to state 103
    DIV             shift, and go to state 104
    POW             shift, and go to state 105
    AT              shift, and go to state 106
    EQ              shift, and go to state 107
    GE              shift, and go to state 108
    LE              shift, and go to state 109
    GT              shift, and go to state 110
    LT              shift, and go to state 111
    MOD             shift, and go to state 112
    EQUALITY        shift, and go to state 113
    RELATIONAL      shift, and go to state 114
    IDENTITY        shift, and go to state 115
    MEMBERSHIP      shift, and go to state 116
    LOGICALAND      shift, and go to state 117
    LOGICALOR       shift, and go to state 118
    BITWISESHIFT    shift, and go to state 119
    '|'             shift, and go to state 120
    '^'             shift, and go to state 121
    '&'             shift, and go to state 122
    '+'             shift, and go to state 123
    '-'             shift, and go to state 124
    '*'             shift, and go to state 125
    '/'             shift, and go to state 126
    '%'             shift, and go to state 127
    DIVFLOOR        shift, and go to state 128
    EXPONENTIATION  shift, and go to state 129

    COMMA     [reduce using rule 30 (expression_stat)]
    $default  reduce using rule 30 (expression_stat)


State 37

   10 simple_stat: return .

    $default  reduce using rule 10 (simple_stat)


State 38

   11 simple_stat: break .

    $default  reduce using rule 11 (simple_stat)


State 39

   12 simple_stat: continue .

    $default  reduce using rule 12 (simple_stat)


State 40

   13 simple_stat: global .

    $default  reduce using rule 13 (simple_stat)


State 41

   14 simple_stat: nonlocal .

    $default  reduce using rule 14 (simple_stat)


State 42

   15 simple_stat: yield .

    $default  reduce using rule 15 (simple_stat)


State 43

   16 simple_stat: function_call .
  127 generator: function_call .

    $end       reduce using rule 16 (simple_stat)
    $end       [reduce using rule 127 (generator)]
    NEWLINE    reduce using rule 16 (simple_stat)
    NEWLINE    [reduce using rule 127 (generator)]
    SEMICOLON  reduce using rule 16 (simple_stat)
    SEMICOLON  [reduce using rule 127 (generator)]
    RBRACE     reduce using rule 16 (simple_stat)
    RBRACE     [reduce using rule 127 (generator)]
    DEDENT     reduce using rule 16 (simple_stat)
    DEDENT     [reduce using rule 127 (generator)]
    ELIF       reduce using rule 16 (simple_stat)
    ELIF       [reduce using rule 127 (generator)]
    ELSE       reduce using rule 16 (simple_stat)
    ELSE       [reduce using rule 127 (generator)]
    AS         reduce using rule 127 (generator)
    EXCEPT     reduce using rule 16 (simple_stat)
    EXCEPT     [reduce using rule 127 (generator)]
    FINALLY    reduce using rule 16 (simple_stat)
    FINALLY    [reduce using rule 127 (generator)]
    $default   reduce using rule 16 (simple_stat)


State 44

   19 compound_stat: if .

    $default  reduce using rule 19 (compound_stat)


State 45

   27 compound_stat: elif .

    $default  reduce using rule 27 (compound_stat)


State 46

   28 compound_stat: else .
   86 elif: else .
